Fix link in Low Battery Notifications & Actions

--- a/Automations/low-battery-notifications-and-actions.yaml
+++ b/Automations/low-battery-notifications-and-actions.yaml
@@ -4,7 +4,7 @@ blueprint:
     # 🪫 Notifications et Actions pour Batterie Faible
 
 
-    ⚠️ Ceci est une traduction de **Howmation** de la blueprint « [Low Battery Notifications & Actions]() » originalement conçue par **Blacky**.
+    ⚠️ Ceci est une traduction de **Howmation** de la blueprint « [Low Battery Notifications & Actions](https://community.home-assistant.io/t/low-battery-notifications-actions/653754) » originalement conçue par **Blacky**.
 
 
     **Version: 2.9**
